--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*
 html { 
   background: url(helping-hand.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -6,48 +5,45 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
-
-
+html,body{width:100%;height:100%;}
 body {
-display: block;
-margin: 0px;
-background-color: #a4c5e6;
-overflow-y: auto;
-padding-top: 150px;
+	position:fixed;
+	margin: 0px;
+	padding:0;
 }
-*/
-#bg {
-  position: fixed; 
-  top: -50%; 
-  left: -50%; 
-  width: 200%; 
-  height: 200%;
-  z-index: 0;
-}
-#bg img {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  right: 0; 
-  bottom: 0; 
-  margin: auto; 
-  min-width: 50%;
-  min-height: 50%;
-}
-
 #promiseBox{
+	border-radius:1em;
 	margin-top: 200px;
 	width: 432px;
 	height: 100px;
 	background: rgba(0, 0, 0, 0.85);
-	z-index: 100;
+	margin: 200px auto 0 auto;
+	padding:1em;
+	box-sizing:border-box;
+	text-align:center;
+	line-height:1.5;
+	text-transform:uppercase;
 }
+#promiseBox a{display:block;}
 
 .topLinks{
-	float: right;
-	font-size: 0.6em;
-	margin: 1em 0em 0em 1em;
-	width: 300px;
+	position: fixed;
+	box-sizing:border-box;
+	width: 100%;
+	padding:1em;
+	top: 0;
+	background-color: rgba(0,0,0,0.5);
+	height: 170px;
+	display: block;
+	font-size: 2rem;
+	-webkit-margin-before: 0em;
+	-webkit-margin-after: 0em;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
+	font-weight: bold;
+	text-decoration: none;
+	color: #000000;
+	font-size: 1rem;
 }
 
 a{
@@ -99,7 +95,7 @@ img {
 	cursor:pointer;
 	color:#ffffff;
 	font-family: Tahoma;
-	font-size:22px;
+	font-size:1.4rem;
 	padding:11px 21px;
 	text-decoration:none;
 }
@@ -149,49 +145,21 @@ hr{
 	background-color: #000000;
 }
 
-h1 {
-	position: fixed;
-	width: 100%;
-	top: 0;
-	background-color: #000000;
-	height: 170px;
-	display: block;
-	font-size: 2em;
-	-webkit-margin-before: 0em;
-	-webkit-margin-after: 0em;
-	-webkit-margin-start: 0px;
-	-webkit-margin-end: 0px;
-	font-weight: bold;
-	text-decoration: none;
-	color: #000000;
-	z-index: 1000;
-}
-
-head {
-	background-color: #000000;
-	display: block;
-	width: 100%;
-	left: 0;
-	margin: 0;
-}
-
-#foot{
+footer{
 	position: fixed;
     bottom: 0;
-    width: 2000px;
+    width: 100%;
     height: 35px;
-    margin-top: 20px;
-	background: #000000;
-	
+	background: #000;
 }
 
 p {
 	font-family: Tahoma;
-	font-size: 1em;
+	font-size: 1rem;
 }
 
 #label{
-	font-size: 2em;
+	font-size: 2rem;
 	font-family: Calibri;
 	font-weight: 300;
 	color: #000000;
