--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
 }
 html,body{width:100%;height:100%;}
 body {
-	position:fixed;
 	margin: 0px;
 	padding:0;
 	overflow-y: scroll;
@@ -53,6 +52,10 @@ body {
 	text-align:center;
 	line-height:1.5;
 	text-transform:uppercase;
+}
+
+#respondBox{
+	font-size: 2 rem;
 }
 
 .contactInput{
@@ -118,30 +121,19 @@ img {
 }
  
 
-.saveButton {
-	-webkit-box-shadow: 0px 0px 0px 0px #276873;
-	box-shadow: 0px 0px 0px 0px #276873;
-	background-color:#599bb3;
-	-moz-border-radius:13px;
-	-webkit-border-radius:13px;
-	border-radius:13px;
-	border:1px solid #29668f;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: Tahoma;
-	font-size:1.4rem;
-	padding:11px 21px;
-	text-decoration:none;
+button{
+	background-color: #408c99;
+	border-radius: 5px;
+	border-color: #679ab7;
+	width: 100px;
+	height: 30px;
+	font-size: 20px;
+	background-image: -webkit-linear-gradient(#679ab7, #3a7094);
 }
 .saveButton:hover {
 	background-color:#408c99;
 }
 
-.saveButton:active {
-	position:relative;
-	top:1px;
-}
 
 #buttonDiv{
 	position: relative;
