--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(helping-hand.jpg) no-repeat center center fixed; 
+  background: url( http://i1.minus.com/jbfiF0BQG8e3tS.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,6 +9,7 @@ html,body{width:100%;height:100%;}
 body {
 	margin: 0px;
 	padding:0;
+	height: 800px;
 	overflow-y: scroll;
 }
 #promiseBox{
@@ -30,7 +31,7 @@ body {
 	border-radius:1em;
 	margin-top: 200px;
 	width: 432px;
-	height: 1000px;
+	height: 700px;
 	background: rgba(0, 0, 0, 0.70);
 	margin: 50px auto 0 auto;
 	padding:1em;
