--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(helping-hand.jpg) no-repeat center center fixed; 
+  background: url(images/helping-hand.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -9,50 +9,233 @@ html,body{width:100%;height:100%;}
 body {
 	margin: 0px;
 	padding:0;
-	height: 800px;
+	height: 60em;
 	overflow-y: scroll;
 }
 #promiseBox{
 	border-radius:1em;
-	margin-top: 200px;
-	width: 432px;
-	height: 300px;
+	width: 50%;
+	height: 70%;
 	background: rgba(0, 0, 0, 0.70);
-	margin: 200px auto 0 auto;
-	padding:1em;
+	margin: 10% auto 0 auto;
+	padding: 2.5%;
 	box-sizing:border-box;
 	text-align:center;
 	line-height:1.5;
-	text-transform:uppercase;
 }
 #promiseBox a{display:block;}
 
-#fillBox{
-	border-radius:1em;
-	margin-top: 200px;
-	width: 432px;
-	height: 700px;
+#newAcctBox{
+	border-radius: 0.5em;
 	background: rgba(0, 0, 0, 0.70);
-	margin: 50px auto 0 auto;
-	padding:1em;
-	box-sizing:border-box;
-	text-align:center;
-	line-height:1.5;
-	text-transform:uppercase;
+	width: 80%;
+	height: 20em;
+	padding: 2%;
+	margin: 5% auto 0 auto;
 }
 
-#needsBox{
-	border-radius:1em;
-	margin-top: 200px;
-	width: 432px;
-	height: 500px;
+.reqAcctBox{
+	float: right;
+	width: 50%;
+}
+
+#introBox{
+	margin-top: 3em;
+	padding: 2.5em 1.5em 2em 1.5em;
+	width: 100%;
+	height: 9%;
+	background-color: rgba(0,0,0, 0.5);
+}
+
+li hr{
+	width: 100%;
+	margin: 2%;
+}
+
+#box{
+	border-radius: 0.5em;
 	background: rgba(0, 0, 0, 0.70);
-	margin: 50px auto 0 auto;
-	padding:4em;
+	/*
+	margin: 5% auto 0 auto;
+	text-align:left;
+	width: 80%;
+	line-height:1.5;*/
+	padding: 2em;
+}
+
+.account li label{
+	text-align: left;
+	font-size: 1em;
+	font-color: #408c99;
+}
+
+ul li{
+	list-style-type: none;
+}
+
+input{
+	display: inline-block;
+	}
+
+li.inboxItem{
+	height: 10%;
+	position: relative;
+	padding-bottom: 10%;
+	display: block;
+	background-color: rgba(0, 0,0, 1.0);
+}
+
+.profileImg{
+	margin-left: 1em;
+	margin-right: 1em;
+	width: 7em;
+	height: 7em;
+	overflow: hidden;
+	float: left;
+}
+
+#imgOptions{
+	height: 8em;
+}
+
+div.donatePhoto{
+	margin-top: 2em;
+	height: 10em;
+}
+
+div.photo{
+	float: left;
+	width: 60px;
+	height: 60px;
+	overflow: hidden;
+	margin-left: 2%;
+	margin-right: 2%;
+}
+
+div.photo a{
+	float: left;
+	width: 60px;
+	height: 60px;
+	overflow: hidden;
+	padding-left: 5%;
+}
+
+img.photo{
+	height: 90%;
+	display: block;
+	margin: 10%;
+}
+
+.messageContent{
+	color: #fff;
+	float: right;
+	width: 70%;
+	margin-right: 5%;
+}
+
+div.date{
+	float: right;
+}
+
+.searchContent span{
+	color: #fff;
+}
+
+#howBox{
+	border-radius:1em;
+	color: #0877bd;
+	margin-top: 200px;
+	width: 20%;
+	height: 50%px;
+	background: rgba(255, 255, 255, 1.0);
+	margin: 5% auto 0 5%;
+	padding:1em;
 	box-sizing:border-box;
-	text-align:center;
+	text-align:left;
 	line-height:1.5;
-	text-transform:uppercase;
+}
+
+	#tfheader{
+		background-color:#c3dfef;
+	}
+	#tfnewsearch{
+		float:center;
+		padding:20px;
+	}
+	.tftextinput{
+		margin: 0;
+		padding: 5px 15px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size:14px;
+		border:1px solid #0076a3; border-right:0px;
+		border-top-left-radius: 5px 5px;
+		border-bottom-left-radius: 5px 5px;
+	}
+	.tfbutton {
+		margin: 0;
+		padding: 5px 15px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size:0.9em;
+		outline: none;
+		cursor: pointer;
+		text-align: center;
+		text-decoration: none;
+		color: #ffffff;
+		border: solid 1px #0076a3; border-right:0px;
+		background: #0095cd;
+		background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+		background: -moz-linear-gradient(top,  #00adee,  #0078a5);
+		border-top-right-radius: 5px 5px;
+		border-bottom-right-radius: 5px 5px;
+	}
+	.tfbutton:hover {
+		text-decoration: none;
+		background: #007ead;
+		background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
+		background: -moz-linear-gradient(top,  #0095cc,  #00678e);
+	}
+	/* Fixes submit button height problem in Firefox */
+	.tfbutton::-moz-focus-inner {
+	  border: 0;
+	}
+	.tfclear{
+		clear:both;
+	}
+
+	
+div header{
+	color: #fff;
+	font-size: 1.5rem;
+	}
+	
+.socialSign{
+	float: left;
+	width: 35%;
+}
+
+.longSign{
+	float: right;
+	width: 60%;
+}
+
+.vertLine{
+  width: 0px; /* Use only border style */
+  height: 100%;
+  float: left; 
+  border: 1px inset; /* This is default border style for <hr> tag */
+}
+
+label{
+	color:#fff;
+	text-align:right;
+	width: 40%;
+	font-size: 1.5em;
+}
+
+
+li label{
+	font-size: 1em;
+	display:inline-block;
 }
 
 #respondBox{
@@ -67,12 +250,13 @@ body {
 }
 
 .topLinks{
+	z-index: 5;
 	position: fixed;
 	box-sizing:border-box;
 	width: 100%;
 	padding:1em;
 	top: 0;
-	background-color: rgba(0,0,0);
+	background-color: #000;
 	height: 70px;
 	display: block;
 	font-size: 2rem;
@@ -98,13 +282,6 @@ a:hover{
 	}
 
 
-	
-img {
-	margin-top: 0px;
-	height: 170px;
-	/*width: 170px;*/
-
-}
 
 .contactInput{
 	background-color: #ffffff;
@@ -132,9 +309,14 @@ button, .button{
 	float: right;
 }
 
+input{
+	width: 50%;
+	}
+
+/*
 .textbox {  
-    height:25px; 
-    width: 300px; 
+    height:10%; 
+    width: 30%; 
 	border: solid 1px #9e9e9e; 
 	outline: 0; 
 	font: normal 13px/100% Verdana, Tahoma, sans-serif; 
@@ -150,10 +332,11 @@ button, .button{
 	border-color: #797979;  
 	-webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 8px; 
 	} 
- 
+*/
+	
 hr{
-	margin-top: 50px;
-	margin-bottom: 50px;
+	margin-top: 2em;
+	margin-bottom: 2em;
 }
 
 #titleLine{
@@ -172,7 +355,11 @@ footer{
 	background: #000;
 }
 
-p {
+div.searchContent{
+	height: 5em;
+}
+
+div p {
 	font-family: Tahoma;
 	font-size: 1rem;
 	color: #ffffff;
@@ -186,11 +373,11 @@ p {
 	font-size: 2rem;
 	font-family: Calibri;
 	font-weight: 300;
-	color: #000000;
+	color: #fff;
 }
 
 
- ul, li, div, nav
+li, nav
         {
             padding:0;
             margin:0;
@@ -201,17 +388,18 @@ p {
             font-family:Calibri;
         }
 
+
         #menu {
             position:relative;
             z-index:0;
 			font: Tahoma;
+			overflow: scroll;
         }
 
 
         .parent-menu {
-            background-color: #536985;
-            min-width:200px;
-            float:left;
+            /*background-color: #536985;*/
+            width: 100%;
         }
 
 
@@ -220,11 +408,19 @@ p {
             list-style-type:none;
         }
 
+        #menu ul li{
+        	background: -webkit-linear-gradient(#405461, #405461, #232E36); /* For Safari 5.1 to 6.0 */
+  			background: -o-linear-gradient(#405461, #405461, #232E36); /* For Opera 11.1 to 12.0 */
+  			background: -moz-linear-gradient(#405461, #405461, #232E36); /* For Firefox 3.6 to 15 */
+  			background: linear-gradient(#405461, #405461, #232E36); 
+        }
+
 
 
         #menu ul li a
         {
-            padding:10px 15px;
+        	height: 2em;
+            padding: 1em;
             display:block;
             text-decoration:none;
         }
@@ -233,6 +429,7 @@ p {
             #menu ul li a:hover
             {
                 background-color:#97b7d8;
+            }
 #menu ul li:hover > ul {
 
                 left: 200px;
@@ -268,9 +465,3 @@ p {
             }
 
 
-	width: 500px;
-	height: 300px;
-	border: 1px red;
-	border-color: #000000;
-	background: #757575;
-}
