--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 	padding:0;
 	height: 60em;
 	overflow-y: scroll;
+	font-family: Tahoma;
 }
 #promiseBox{
 	border-radius:1em;
@@ -75,7 +76,6 @@ body {
 }
 
 div.log{
-	font-family: Tahoma;
 	float: right;
 	margin-bottom: 2rem;
 	margin: 0 2rem 2rem 0;
@@ -84,7 +84,6 @@ div.log{
 header.inbox{
 	padding-left: 5%;
 	font-size: 2.5em;
-	font-family: Tahoma;
 	font-weight: bold;
 }
 
@@ -113,7 +112,6 @@ li hr{
 header.reqHead{
 	padding-left: 5%;
 	font-size: 2.5em;
-	font-family: Tahoma;
 	font-weight: bold;
 }
 
@@ -153,14 +151,13 @@ span.reqNav{
 p.contAmt{
 	width: 8em;
 	float: right;
-	font-family: Tahoma;
 	font-size: 2em;
 	text-align: right;
 	margin: 0 1em 0 1em;
 }
  a.contName{
  	color: #ABDFFF;
- 	font-size: 2em;
+ 	font-size: 1.5em;
  	font-family: Tahoma;
  }
 
@@ -171,14 +168,12 @@ p.contAmt{
 header.fulfilled{
 	font-size: 2.5em;
 	text-align: center;
-	font-family: Tahoma;
 	font-weight: bold;
 }
 
 header.contHead{
  	font-size: 2.5em;
  	text-align: center;
- 	font-family: Tahoma;
  	font-weight: bold;
  }
 
@@ -186,7 +181,13 @@ header.contHead{
  	margin: 0 0 1em 0;
  }
 
- /* end the request historu contributor info */
+ /* end the request history contributor info */
+
+ /* REQUEST HISTORY CONT info */
+img.followReqPic{
+	height: 10em;
+	width: 10em;
+}
 
 .account li label{
 	text-align: left;
@@ -205,7 +206,6 @@ input{
 /* message system stuff */
 
 div.messageContainer{
-	font-family: Tahoma;
 	overflow-y:scroll;
 }
 
@@ -241,12 +241,10 @@ ol.inbox-list{
 
 div.messageDate{
 	float: right;
-	font-family: Tahoma;
 }
 
 a#mailPreview{
 	color: #000;
-	font-family: Tahoma;
 }
 
 a#mailPreview:hover{
@@ -271,7 +269,6 @@ img.photo{
 nav.inboxNav{
 	float: center;
 	margin: 0.5em 0 0.5em 2.1em;
-	font-family: Tahoma;
 	font-size: 1.5em;
 }
 
@@ -316,12 +313,10 @@ div.searchContent{
 }
 
 a#searchReqPreview{
-	font-family: Tahoma;
 }
 
 label.searchOrgName{
 	text-align: left;
-	font-family: Tahoma;
 	font-size: 2em;
 }
 
@@ -351,7 +346,7 @@ hr.style-six {
 	.tftextinput{
 		margin: 0;
 		padding: 5px 15px;
-		font-family: Arial, Helvetica, sans-serif;
+		/*font-family: Arial, Helvetica, sans-serif;*/
 		font-size:14px;
 		border:1px solid #0076a3; border-right:0px;
 		border-top-left-radius: 5px 5px;
@@ -360,7 +355,7 @@ hr.style-six {
 	.tfbutton {
 		margin: 0;
 		padding: 5px 15px;
-		font-family: Arial, Helvetica, sans-serif;
+		/*font-family: Arial, Helvetica, sans-serif;*/
 		font-size:0.9em;
 		outline: none;
 		cursor: pointer;
@@ -520,7 +515,6 @@ div p {
 
 #label{
 	font-size: 2rem;
-	font-family: Calibri;
 	font-weight: 300;
 	color: #fff;
 }
@@ -531,12 +525,6 @@ li, nav
             padding:0;
             margin:0;
         }
-
-        body
-        {
-            font-family:Calibri;
-        }
-
 
         #menu {
             position:relative;
